# algo2

./: 1  Main.cpp  Planet.cpp  Planet.h
Question1/: 1  A2planets.txt  Main.cpp  Planet.cpp  Planet.h  planetNumber.txt
Question2/: CMakeCache.txt  CMakeLists.txt  Graph.cpp  Graph.h  Main.cpp  Makefile  Path.gv  cmake_install.cmake  question3  test
Question2_Final/: CMakeCache.txt  Graph.cpp  Graph.h  Main.cpp  Makefile  Planet.h  cmake_install.cmake  question2
Question3/: CMakeCache.txt  CMakeLists.txt  Graph.cpp  Graph.gv  Graph.h  Kruskal.cpp  Main.cpp  Makefile  Planet.cpp  cmake_install.cmake  kruskal  question2  test.gv
Question3_Final/: CMakeCache.txt  CMakeLists.txt  EdgesNumber.txt  Graph.cpp  Graph.h  Main.cpp  Makefile  Mst.gv  cmake_install.cmake  question3
